--- a/notebooks/analysis.ipynb
+++ b/notebooks/analysis.ipynb
@@ -17,13 +17,15 @@
     "* **Monte Carlo Tree Search**: The below results look pretty poor, but the algorithm can do much better than that, except it does not scale well, at least that can be said about my implementation. It also easily gets stuck in local minima early on. For a problem with 20 nodes, we begin with expanded root of length 2 (0->1, 0->2,...,0->19) and we run N simulations to estimate the expected distance of that root. There are (18-1)! possible routes from this point, so if we run 1,000,000 simulations, then we still check tiny proportion of them, nonetheless we must commit to one of these options when we finish simulating. Also, the exploration criterion is a little tough to tune if the reward is not in the 0-1 range. As for the scalability issues, the total number of simulations increases multiplicatively and each simulation requires us to aggregated the lookup table for the length of the route that we are currently considering.\n",
     "\n",
     "On the to-do list:\n",
-    "* **Generic algorithm**\n",
+    "* **Genetic Algorithm**\n",
+    "* **Ant Colony Optimisation**\n",
     "* **Neural Network**\n",
-    "* **Ant Colony Optimisation / Particle Swarm Optimisation**\n",
-    "* **Bayesian Optimisation**\n",
+    "* **Come up with your own heuristic**\n",
+    "\n",
+    "Other interesting ideas:\n",
     "* **Q-Learning**\n",
-    "* **Potentially other RL methods like SARSA or TD**\n",
-    "* **Come up with your own heuristic**"
+    "* **Bayesian Optimisation**\n",
+    "* **Other RL methods like SARSA or TD**"
    ]
   },
   {
